imported patch up_casc

--- a/src/HOL/TPTP/CASC/SysDesc_Nitpick.html
+++ b/src/HOL/TPTP/CASC/SysDesc_Nitpick.html
@@ -1,5 +1,5 @@
 <HR><!------------------------------------------------------------------------>
-<H2>Nitpick 2013</H2>
+<H2>Nitpick 2015</H2>
 Jasmin C. Blanchette<BR>
 Technische Universit&auml;t M&uuml;nchen, Germany <BR>
 
@@ -51,8 +51,9 @@ BSD-style license from
 
 <H3>Expected Competition Performance</H3>
 
+<P>
 Thanks to Kodkod's amazing power, we expect that Nitpick will beat both Satallax
-and Refute with its hands tied behind its back in the TNT category.
+and Refute with its hands tied behind its back.
 
 <H3>References</H3>
 <DL>
