--- a/src/HOL/TPTP/CASC/SysDesc_Refute.html
+++ b/src/HOL/TPTP/CASC/SysDesc_Refute.html
@@ -1,5 +1,5 @@
 <HR><!------------------------------------------------------------------------>
-<H2>Refute 2013</H2>
+<H2>Refute 2015</H2>
 Jasmin C. Blanchette<sup>1</sup>, Tjark Weber<sup>2</sup><BR>
 <sup>1</sup>Technische Universit&auml;t M&uuml;nchen, Germany <BR>
 <sup>2</sup>Uppsala Universitet, Sweden <BR>
@@ -33,8 +33,8 @@ BSD-style license from
 
 <H3>Expected Competition Performance</H3>
 
-We expect that Refute will solve about 75% of the problems solved by Nitpick in
-the TNT category, and perhaps a few problems that Nitpick cannot solve.
+<P>
+We expect Refute to beat Satallax but also to be beaten by Nitpick.
 
 <H3>References</H3>
 <DL>
