--- a/src/HOL/TPTP/CASC/SysDesc_Isabelle.html
+++ b/src/HOL/TPTP/CASC/SysDesc_Isabelle.html
@@ -29,10 +29,11 @@ isabelle tptp_isabelle_hot 100 SEU/SEU824^3.p
 </pre></blockquote>
 
 <P>
-Two versions of Isabelle participate this year. The <em>demo</em> (or HOT) version
+Isabelle is available in two versions. The <em>demo</em> (or HOT) version
 includes its competitors LEO-II [<A HREF="#References">BPTF08</A>] and Satallax
 [<A HREF="#References">Bro12</A>] as Sledgehammer backends, whereas the
-<em>competition</em> version leaves them out.
+<em>competition</em> version leaves them out. As the name suggests,
+only the competition version takes part in the competition.
 
 <H3>Strategies</H3>
 
